images moved. more team member pics added

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <h2>Applications are now open!</h2>
                     <p class="p-heading p-large">Interested in joining the largest student-led code for good groups in
                         Calgary? Applications are open
-                        till <b>February 14, 2020.</b>
+                        till <b>February 14, 2020 11:59pm.</b>
                     </p>
 
                     <div class="m-4">
@@ -551,7 +551,7 @@
                     <!-- Team Member -->
                     <div class="team-member">
                         <div class="image-wrapper">
-                            <img class="img-fluid" src="images/_cole-colorcorrected.jpg" alt="alternative">
+                            <img class="img-fluid" src="images/_team/_cole-colorcorrected.jpg" alt="alternative">
                         </div> <!-- end of image wrapper -->
                         <p class="p-large"><strong>Cole Thiessen</strong></p>
                         <p class="job-title">UofC Leader</p>
@@ -568,7 +568,7 @@
                     <!-- Team Member -->
                     <div class="team-member">
                         <div class="image-wrapper">
-                            <img class="img-fluid" src="images/_ariba.jpg" alt="alternative">
+                            <img class="img-fluid" src="images/_team/_ariba.jpg" alt="alternative">
                         </div> <!-- end of image wrapper -->
                         <p class="p-large"><strong>Ariba Anees</strong></p>
                         <p class="job-title">UofC Leader</p>
@@ -586,7 +586,7 @@
                     <!-- Team Member -->
                     <div class="team-member">
                         <div class="image-wrapper">
-                            <img class="img-fluid" src="images/_kony.png" alt="alternative">
+                            <img class="img-fluid" src="images/_team/_kony.png" alt="alternative">
                         </div> <!-- end of image wrapper -->
                         <p class="p-large"><strong>Kieran Konynenbelt</strong></p>
                         <p class="job-title">UofC Leader</p>
@@ -604,7 +604,7 @@
                     <!-- Team Member -->
                     <div class="team-member">
                         <div class="image-wrapper">
-                            <img class="img-fluid" src="images/_dustin-centered.jpg" alt="alternative">
+                            <img class="img-fluid" src="images/_team/_dustin-centered.jpg" alt="alternative">
                         </div> <!-- end of image wrapper -->
                         <p class="p-large"><strong>Dustin King</strong></p>
                         <p class="job-title">UofC Leader</p>
@@ -622,7 +622,7 @@
                     <!-- Team Member -->
                     <div class="team-member">
                         <div class="image-wrapper">
-                            <img class="img-fluid" src="images/_cjpg.jpg" alt="alternative">
+                            <img class="img-fluid" src="images/_team/_cjpg.jpg" alt="alternative">
                         </div> <!-- end of image wrapper -->
                         <p class="p-large"><strong>Christian Garrovillo</strong></p>
                         <p class="job-title">SAIT Leader</p>
@@ -637,12 +637,30 @@
                     </div> <!-- end of team-member -->
                     <!-- end of team member -->
 
+                    <!-- Team Member -->
+                    <div class="team-member">
+                        <div class="image-wrapper">
+                            <img class="img-fluid" src="images/_team/_jj.jpg" alt="alternative">
+                        </div> <!-- end of image wrapper -->
+                        <p class="p-large"><strong>JayJay Cayabyab</strong></p>
+                        <p class="job-title">UofC Leader</p>
+                        <span class="social-icons">
+                            <span class="fa-stack">
+                                <a href=https://www.linkedin.com/in/jofred-cayabyab> <i
+                                        class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                </a>
+                            </span>
+                        </span> <!-- end of social-icons -->
+                    </div> <!-- end of team-member -->
+                    <!-- end of team member -->
+
                     <h4>External Advisors</h4>
                     <br />
                     <!-- Team Member -->
                     <div class="team-member">
                         <div class="image-wrapper">
-                            <img class="img-fluid" src="images/_camilo.jpg" alt="alternative">
+                            <img class="img-fluid" src="images/_team/_camilo.jpg" alt="alternative">
                         </div> <!-- end of image-wrapper -->
 
                         <p class="p-large"><strong>Camilo Rostoker</strong></p>
@@ -660,13 +678,30 @@
                     <!-- Team Member -->
                     <div class="team-member">
                         <div class="image-wrapper">
-                            <img class="img-fluid" src="images/_priyash.jpg" alt="alternative">
+                            <img class="img-fluid" src="images/_team/_priyash.jpg" alt="alternative">
                         </div> <!-- end of image wrapper -->
                         <p class="p-large"><strong>Priyash Bista</strong></p>
                         <p class="job-title">Scrum Master @ Benevity</p>
                         <span class="social-icons">
                             <span class="fa-stack">
                                 <a href=https://www.linkedin.com/in/priyash> <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                                </a>
+                            </span>
+                        </span> <!-- end of social-icons -->
+                    </div> <!-- end of team-member -->
+                    <!-- end of team member -->
+
+                    <!-- Team Member -->
+                    <div class="team-member">
+                        <div class="image-wrapper">
+                            <img class="img-fluid" src="images/_team/_hadiya.jpg" alt="alternative">
+                        </div> <!-- end of image wrapper -->
+                        <p class="p-large"><strong>Hadiya Firdaus</strong></p>
+                        <p class="job-title">Software Developer @ Benevity</p>
+                        <span class="social-icons">
+                            <span class="fa-stack">
+                                <a href=https://www.linkedin.com/in/hfirdaus> <i class="fas fa-circle fa-stack-2x"></i>
                                     <i class="fab fa-linkedin-in fa-stack-1x"></i>
                                 </a>
                             </span>
