fixed bug with projects

--- a/projects.html
+++ b/projects.html
@@ -316,14 +316,14 @@
                                 </ul>
                             </li>
                         </ol>
-                        <a href="#project-mindfuel" data-toggle="collapse">Details ></a>
+                        <a href="#project-momentum" data-toggle="collapse">Details ></a>
                     </div>
                 </div>
                 <!--end of project summary-->
             </div>
 
             <!-- Project Meat -->
-            <div class="collapse mt-3" id="project-mindfuel">
+            <div class="collapse mt-3" id="project-momentum">
                 <div class="card-body">
                     <p><b>Momentum</b> helps low-income Calgarians learn how to manage their money. One of their
                         programs is savings matching where, if a user can prove that they have saved money, Momentum
