--- a/members.html
+++ b/members.html
@@ -116,15 +116,31 @@
     </header> <!-- end of ex-header -->
     <!-- end of header -->
 
+    <!-- Breadcrumbs -->
+    <div class="ex-basic-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="breadcrumbs">
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Member
+                            Registration</span>
+                    </div> <!-- end of breadcrumbs -->
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of ex-basic-1 -->
+    <!-- end of breadcrumbs -->
+
     <!-- Applications promo -->
     <div id="applications" class="cards-1">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>Applications are now open!</h2>
-                    <p class="p-heading p-large">Interested in joining the largest student-led code for good groups in
-                        Calgary? Applications are open
-                        till <b>February 14, 2020.</b>
+                    <h2>Project intake has now closed.</h2>
+                    <p class="p-heading p-large">However, don't let this discourage you! We are still accepting
+                        applications in the case a new project becomes available, or if an existing project requires
+                        more
+                        members than expected.
                     </p>
 
                     <div class="m-4">
@@ -136,7 +152,7 @@
                             Application Form</a>
                     </div>
 
-                    <div class="m-4">
+                    <div class="m-4" hidden>
                         <h4 class=" p-large">If you are interested in joining an internal admin role, <br />please fill
                             out the Admin Application Form.</h4>
                         <a class="btn-solid-lg"
@@ -149,11 +165,10 @@
     </div>
 
 
-    <div class="container d-none">
+    <div class="container" hidden>
         <h2 class="mb-4 text-secondary font-weight-normal">Member Registration Form</h4>
-            <form id="member-form"
-                action="https://docs.google.com/forms/d/e/1FAIpQLScUPNsq5qOc9530bkgJ-5Jo57Wiq4kb2PILFPs8s-GZ-doCqw"
-                method="post" onsubmit="return window.submitGoogleForm(this);">
+            <form id="member-form" action="TODO: INSERT LINK" method="post"
+                onsubmit="return window.submitGoogleForm(this);">
                 <fieldset>
                     <p>Please complete this form if you are interested in working on a project for a cause partnered
                         with Code the Change YYC or if you want to hear about future events.</p>
@@ -237,110 +252,103 @@
                 </fieldset>
             </form>
     </div>
-    </section>
-    </main>
 
-</body>
-
-</html>
-
-
-<!-- Breadcrumbs -->
-<div class="ex-basic-1">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="breadcrumbs">
-                    <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Member
-                        Registration</span>
-                </div> <!-- end of breadcrumbs -->
-            </div> <!-- end of col -->
-        </div> <!-- end of row -->
-    </div> <!-- end of container -->
-</div> <!-- end of ex-basic-1 -->
-<!-- end of breadcrumbs -->
+    <!-- Breadcrumbs -->
+    <div class="ex-basic-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="breadcrumbs">
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Member
+                            Registration</span>
+                    </div> <!-- end of breadcrumbs -->
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of ex-basic-1 -->
+    <!-- end of breadcrumbs -->
 
 
-<!-- Footer -->
-<div class="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="footer-col">
-                    <h4>About Code The Change YYC</h4>
-                    <p>Welcome to a passionate club of engineers and makers. Code from day one, with impact.</p>
-                </div>
-            </div> <!-- end of col -->
-            <div class="col-md-4">
-                <div class="footer-col middle">
-                    <h4>Our Partner Chapters</h4>
-                    <ul class="list-unstyled li-space-lg">
-                        <li class="media">
-                            <i class="fas fa-square"></i>
-                            <div class="media-body">California <a class="turquoise"
-                                    href="http://codethechange.stanford.edu/#/">Code The Change Stanford</a></div>
-                        </li>
-                        <li class="media">
-                            <i class="fas fa-square"></i>
-                            <div class="media-body">British Columbia <a class="turquoise"
-                                    href="http://codethechange.ca/">Code The Change Foundation</a></div>
-                        </li>
-                    </ul>
-                </div>
-            </div> <!-- end of col -->
-            <div class="col-md-4">
-                <div class="footer-col last">
-                    <h4>Social Media</h4>
-                    <span class="fa-stack">
-                        <a href="https://www.facebook.com/CodeTheChangeYYC/">
-                            <i class="fas fa-circle fa-stack-2x"></i>
-                            <i class="fab fa-facebook-f fa-stack-1x"></i>
-                        </a>
-                    </span>
-                    <span class="fa-stack">
-                        <a href="https://www.linkedin.com/company/code-the-change-yyc/">
-                            <i class="fas fa-circle fa-stack-2x"></i>
-                            <i class="fab fa-linkedin-in fa-stack-1x"></i>
-                        </a>
-                    </span>
-                    <span class="fa-stack">
-                        <a href="https://www.instagram.com/codethechangeyyc/">
-                            <i class="fas fa-circle fa-stack-2x"></i>
-                            <i class="fab fa-instagram fa-stack-1x"></i>
-                        </a>
-                    </span>
-                </div>
-            </div> <!-- end of col -->
-        </div> <!-- end of row -->
-    </div> <!-- end of container -->
-</div> <!-- end of footer -->
-<!-- end of footer -->
+    <!-- Footer -->
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="footer-col">
+                        <h4>About Code The Change YYC</h4>
+                        <p>Welcome to a passionate club of engineers and makers. Code from day one, with impact.</p>
+                    </div>
+                </div> <!-- end of col -->
+                <div class="col-md-4">
+                    <div class="footer-col middle">
+                        <h4>Our Partner Chapters</h4>
+                        <ul class="list-unstyled li-space-lg">
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body">California <a class="turquoise"
+                                        href="http://codethechange.stanford.edu/#/">Code The Change Stanford</a></div>
+                            </li>
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body">British Columbia <a class="turquoise"
+                                        href="http://codethechange.ca/">Code The Change Foundation</a></div>
+                            </li>
+                        </ul>
+                    </div>
+                </div> <!-- end of col -->
+                <div class="col-md-4">
+                    <div class="footer-col last">
+                        <h4>Social Media</h4>
+                        <span class="fa-stack">
+                            <a href="https://www.facebook.com/CodeTheChangeYYC/">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-facebook-f fa-stack-1x"></i>
+                            </a>
+                        </span>
+                        <span class="fa-stack">
+                            <a href="https://www.linkedin.com/company/code-the-change-yyc/">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                            </a>
+                        </span>
+                        <span class="fa-stack">
+                            <a href="https://www.instagram.com/codethechangeyyc/">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-instagram fa-stack-1x"></i>
+                            </a>
+                        </span>
+                    </div>
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of footer -->
+    <!-- end of footer -->
 
 
-<!-- Copyright -->
-<div class="copyright">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <p class="p-small">Copyright © Code The Change YYC - Web Page Template by <a
-                        href="https://inovatik.com">Inovatik</a></p>
-            </div> <!-- end of col -->
-        </div> <!-- enf of row -->
-    </div> <!-- end of container -->
-</div> <!-- end of copyright -->
-<!-- end of copyright -->
+    <!-- Copyright -->
+    <div class="copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <p class="p-small">Copyright © Code The Change YYC - Web Page Template by <a
+                            href="https://inovatik.com">Inovatik</a></p>
+                </div> <!-- end of col -->
+            </div> <!-- enf of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of copyright -->
+    <!-- end of copyright -->
 
 
-<!-- Scripts -->
-<script src="js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-<script src="js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
-<script src="js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
-<script src="js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
-<script src="js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
-<script src="js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
-<script src="js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
-<script src="js/scripts.js"></script> <!-- Custom scripts -->
-<script src="js/google-form.js"></script> <!-- Custom scripts -->
+    <!-- Scripts -->
+    <script src="js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+    <script src="js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
+    <script src="js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+    <script src="js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
+    <script src="js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
+    <script src="js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
+    <script src="js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
+    <script src="js/scripts.js"></script> <!-- Custom scripts -->
+    <script src="js/google-form.js"></script> <!-- Custom scripts -->
 </body>
 
 </html>
