--- a/sponsors.html
+++ b/sponsors.html
@@ -120,7 +120,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumbs">
-                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Projects</span>
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Sponsors</span>
                     </div> <!-- end of breadcrumbs -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -129,60 +129,52 @@
     <!-- end of breadcrumbs -->
 
 
-    <!-- Terms Content -->
-    <div class="ex-basic-2">
+    <!-- Services -->
+    <div id="information" class="cards-1">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 offset-lg-1">
-                    <div class="text-container">
-                        <h3>Currently Available Projects</h3>
-                        <h2>The YW</h2>
-                        <ol>
-                            <li><b>Natural Language Processing Project</b> - The YW receives critical incident reports
-                                from people at risk describing the risks they are facing, along with various details
-                                regarding personal information and the incident itself. These reports can often be
-                                difficult to categorize, as the current format requires that volunteers at the YW read
-                                through each report to determine the type of report and who should manage it. They have
-                                asked for our help in developing a machine learning solution to analyze and correctly
-                                categorize the reports based on the type of incident. The technologies used will be
-                                discussed with the YW further, but you will be sure to hone your Python, ML, and data
-                                analysis skills by working on this project, while also helping vulnerable people receive
-                                the help they need at a more efficient rate.</li>
-                            <li><b>E-learning Storefront Project</b> - The YW has asked for our help in developing a
-                                storefront/marketing website with e-commerce integration to host informational
-                                e-learning videos on the topic of Mindful Workplaces. These videos will help employees
-                                across Calgary manage stress, conflict, and pick up on emotional regulation skills,
-                                which all lead towards healthier work environments. You will expand your web development
-                                and e-commerce skills, while helping develop a product that will reduce stress and
-                                improve the work life of hundreds of Calgarians.</li>
-                        </ol>
-                        <h2>Momentum</h2>
-                        <ol>
-                            <li><b>Money Savings Program</b> - Momentum offers financial education and resources to
-                                Calgarians, and one of the excellent programs they offer encourages low-income
-                                Calgarians to learn how to save money by matching the amount they manage to save at the
-                                end of a set time period. Their current solution needs various improvements regarding
-                                verification of savings, low-income status, and location. Some technologies you will be
-                                working with are various web development languages and API integration with financial
-                                aggregators, just to name a few. Plus, you’ll be directly contributing to a program that
-                                enables Calgarians to escape the grips of poverty.</li>
-                        </ol>
-                        <h2>Alberta Mental Health Advocacy Coalition (AMHAC)</h2>
-                        <ol>
-                            <li><b>Website/Logo Project</b> - The Alberta Mental Health Advocacy Coalition (AMHAC) aims
-                                to transform the mental healthcare system to one that is more accessible, appropriate,
-                                equitable, effective, empowering and sustainable for patients, family, the public and
-                                health providers. They currently do not have a logo or website to accurately represent
-                                them or their vision. You will be involved in graphic design and web development,
-                                including UI/UX design, while contributing to a mission that benefits one of the
-                                greatest struggles that the majority of society faces.</li>
-                        </ol>
-                    </div> <!-- end of text-container -->
-                </div>
+                <div class="col-lg-12">
+                    <p class="p-heading p-large">We are continously pursuing endeavours that could help students
+                        achieve more social good for the community. These are the sponsors that help make our events and
+                        ideas possible.</p>
+                </div> <!-- end of col -->
             </div> <!-- end of row -->
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-body">
+                            <a class="card-link" href="https://www.benevity.com/">
+                                <img class="card-image" src="images/_entities/_benevityB.png" alt="alternative">
+                                <h4 class="card-title">Benevity</h4>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-body">
+                            <a class="card-link" href="https://www.nureva.com/">
+                                <img class="card-image" src="images/_entities/_nurevaN.png" alt="alternative">
+                                <h4 class="card-title">Nureva™</h4>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+            <div class="m-4">
+                <p class="p-heading p-large my-4">Want to help shape the future of Code the Change YYC? Feel free to
+                    reach out to us and we'd love to discuss your involvement.
+                </p>
+                <a class="btn-solid-lg page-scroll" href="index.html#contact">Contact us</a>
+            </div>
         </div> <!-- end of container -->
-    </div> <!-- end of ex-basic -->
-    <!-- end of terms content -->
+    </div> <!-- end of cards-1 -->
+    <!-- end of services -->
 
 
     <!-- Breadcrumbs -->
@@ -191,7 +183,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumbs">
-                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Projects</span>
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Sponsors</span>
                     </div> <!-- end of breadcrumbs -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
