amhac is properly called an Advocacy Coalition.

--- a/projects.html
+++ b/projects.html
@@ -205,7 +205,7 @@
                 <!-- Project Summary -->
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h4 class="card-title">Alberta Mental Health Activism Coalition</h4>
+                        <h4 class="card-title">Alberta Mental Health Advocacy Coalition</h4>
                         <ol>
                             <li>
                                 <b class="m-1">Website and Marketing design</b>
@@ -225,7 +225,7 @@
             <!-- Project Meat -->
             <div class="collapse mt-3" id="project-amhac">
                 <div class="card-body">
-                    <p><b>The Alberta Mental Health Activism Coalition</b> has asked Code The Change YYC to help
+                    <p><b>The Alberta Mental Health Advocacy Coalition</b> has asked Code The Change YYC to help
                         build
                         them a website. They are looking to expand their online presence so that they can reach more
                         people and help advocate for the importance of mental health awareness in Alberta. This will
