--- a/thankyou.html
+++ b/thankyou.html
@@ -73,13 +73,12 @@
                         <a class="dropdown-item" href="sponsors.html"><span class="item-text">Sponsors</span></a>
                     </div>
                 </li>
-
                 <!-- Registration Dropdown Menu -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle page-scroll" href="#information" id="navbarDropdown"
-                        role="button" aria-haspopup="true" aria-expanded="false">Sign Up</a>
+                    <a class="nav-link dropdown-toggle page-scroll" href="#" id="navbarDropdown" role="button"
+                        aria-haspopup="true" aria-expanded="false">Sign Up</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item page-scroll" href="#applications"><span class="item-text">Member
+                        <a class="dropdown-item page-scroll" href="members.html"><span class="item-text">Member
                                 Registration</span></a>
                         <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="causes.html"><span class="item-text">Cause
@@ -89,12 +88,11 @@
                 <!-- end of dropdown menus -->
 
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="index.html#about">About</a>
+                    <a class="nav-link page-scroll" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="index.html#contact">Contact</a>
+                    <a class="nav-link page-scroll" href="#contact">Contact</a>
                 </li>
-
             </ul>
         </div>
     </nav> <!-- end of navbar -->
